--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -9,23 +9,25 @@
 
         <script src="./Assets/js/main.js"></script>
 
+        <!-- Import de axios -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
         <title>Formulaire de contact</title>
     </head>
 
     <body>
         <div>
-            <div class="container">
+            <div class="container" id="form">
                 <h1>Formulaire de contact</h1>
                 <input type="text" placeholder="Prénom" id="firstName" />
                 <input type="text" placeholder="Nom" id="lastName" />
                 <input type="email" placeholder="Email" id="email" />
                 <input type="text" placeholder="Sujet" id="message" />
-                <textarea
-                    cols="30"
-                    rows="10"
-                    placeholder="Ecrivez votre message ici..."
-                ></textarea>
+                <textarea placeholder="Ecrivez votre message ici..."></textarea>
                 <button class="container">Envoyer le message</button>
+                <!-- <input type="submit" value="Envoyer le message" /> -->
+
+                <!-- <input type="submit" value="Soumettre le formulaire" /> -->
             </div>
         </div>
     </body>
